--- a/index.html
+++ b/index.html
@@ -227,23 +227,23 @@
                 301-653-3540</li>
               <li>
                 <i class="fa fa-envelope-o fa-fw"></i>
-                <a href="mailto:ahmerqudsi@gmail.com">ahmerqudsi@gmail.com</a>
+                <a href="mailto:ahmerqudsi@gmail.com" target="_blank">ahmerqudsi@gmail.com</a>
               </li>
             </ul>
             <br>
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/ahmer-qudsi-602370143/">
+                <a href="https://www.linkedin.com/in/ahmer-qudsi-602370143/" target="_blank">
                   <i class="fa fa-linkedin-square fa-fw fa-3x"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/aqudsi">
+                <a href="https://github.com/aqudsi" target="_blank">
                   <i class="fa fa-github-square fa-fw fa-3x"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://stackoverflow.com/users/8173055/aqudsi">
+                <a href="https://stackoverflow.com/users/8173055/aqudsi" target="_blank">
                   <i class="fa fa-stack-overflow fa-fw fa-3x"></i>
                 </a>
               </li>
