fixed email opening new tab

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 301-653-3540</li>
               <li>
                 <i class="fa fa-envelope-o fa-fw"></i>
-                <a href="mailto:ahmerqudsi@gmail.com" target="_blank">ahmerqudsi@gmail.com</a>
+                <a href="mailto:ahmerqudsi@gmail.com">ahmerqudsi@gmail.com</a>
               </li>
             </ul>
             <br>
