changed background pic

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                   <hr class="small">  
                    <a href="https://aqudsi.github.io/CryptoTracker/" target="_blank">
                     <img class="img-portfolio img-fluid" src="img/bitcoin.jpg">
+                    <div class="info"></div>
                   </a>
                 </div>
               </div>
